--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Tennis Score</string>
+    <string name="server">Server</string>
+    <string name="hyphen">-</string>
 </resources>
