--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Tennis Score</string>
     <string name="server">Server</string>
     <string name="hyphen">-</string>
+    <string name="game_over">Game Over</string>
 </resources>
